typeway-macros/tests/handler/fail_bad_return.stderr
error[E0277]: `NotAResponse` cannot be used as an HTTP response
 --> tests/handler/fail_bad_return.rs:6:26
  |
6 | async fn bad_return() -> NotAResponse {
  |                          ^^^^^^^^^^^^ does not implement `IntoResponse`
  |
help: the trait `IntoResponse` is not implemented for `NotAResponse`
 --> tests/handler/fail_bad_return.rs:3:1
  |
3 | struct NotAResponse;
  | ^^^^^^^^^^^^^^^^^^^
  = note: valid response types include: `&'static str`, `String`, `Json<T>`, `StatusCode`, `(StatusCode, T)`, `Result<T, E>`
  = help: the following other types implement trait `IntoResponse`:
            &'static str
            (http::status::StatusCode, T)
            Infallible
            Json<T>
            JsonError
            NegotiatedResponse<T, Formats>
            Result<T, E>
            String
          and $N others
note: required by a bound in `__check_response`
 --> tests/handler/fail_bad_return.rs:5:1
  |
5 | #[handler]
  | ^^^^^^^^^^ required by this bound in `__check_response`
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)
